Cambios de la base(Agregar nuevos campos)

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -338,7 +338,7 @@
 						</p>
 					</div>
 					<div class="col-md-3 colorlib-widget">
-						<h4>Information</h4>
+						<h4>Información</h4>
 						<p>
 							<ul class="colorlib-footer-links">
 								<li><a href="#"><i class="icon-check"></i> Acerca de</a></li>
@@ -350,7 +350,7 @@
 					</div>
 
 					<div class="col-md-3 colorlib-widget">
-						<h4>Contact Info</h4>
+						<h4>Información de contacto</h4>
 						<ul class="colorlib-footer-links">
 							<li>Barrio el parnaso, <br> Siguatepeque comayagua</li>
 							<li><a href="tel://1234567920"><i class="icon-phone"></i> + 504 9579-9550</a></li>
