--- a/views/getStarted.handlebars
+++ b/views/getStarted.handlebars
@@ -1,9 +1,20 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="/getStarted/text.css">
 
-<body>
-    
-</body>
+<div id=Started>
+  Empieza a 
+  <div id=flip>
+    <div><div>CONTROLAR</div></div>
+    <div><div>AHORRAR</div></div>
+    <div><div>TRIUNFAR!</div></div>
+  </div>
+   ¡AHORA!
+  <div>
+    <h1></h1>
+  </div>
+  <div id="bottonStart">
+    <a href="/start">
+      <button type="button" class="btn btn-block btn-success btn-lg">Comenzar</button>
+    </a>
+  </div>
+</div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
