--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -3,9 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AdminLTE 2 | Dashboard</title>
+  <title>{{tittle}}</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+
+
+  <link rel="stylesheet" href="/fab/fab.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
   <!-- Bootstrap 3.3.7 -->
   <link rel="stylesheet" href="/templates/bower_components/bootstrap/dist/css/bootstrap.min.css">
   <!-- Font Awesome -->
@@ -28,6 +33,11 @@
   <!-- bootstrap wysihtml5 - text editor -->
   <link rel="stylesheet" href="/templates/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
 
+  <link rel="stylesheet" href="/css/modal.css">
+  <!--Importar Materialize CSS-->
+  
+
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -43,7 +53,7 @@
 
   <header class="main-header">
     <!-- Logo -->
-    <a href="index2.html" class="logo">
+    <a href="/home" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>W</b></span>
       <!-- logo for regular state and mobile devices -->
@@ -139,7 +149,7 @@
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <img src="/templates/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-              <span class="hidden-xs">Alexander Pierce</span>
+              <span class="hidden-xs">{{user.name}}</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
@@ -147,16 +157,16 @@
                 <img src="/templates/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  Alexander Pierce - Web Developer
+                  {{user.name}}
                 </p>
               </li>
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
+                  <a href="/profile" class="btn btn-default btn-flat">Perfil</a>
                 </div>
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                  <a href="/logout" class="btn btn-default btn-flat">Cerrar sesión</a>
                 </div>
               </li>
             </ul>
@@ -176,36 +186,58 @@
           <img src="/templates/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Alexander Pierce</p>
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+          <p>{{user.name}}</p>
+          <a href="#"><i class="fa fa-circle text-success"></i> En linea</a>
         </div>
       </div>
-      <!-- search form -->
-      <form action="#" method="get" class="sidebar-form">
-        <div class="input-group">
-          <input type="text" name="q" class="form-control" placeholder="Search...">
-          <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-                </button>
-              </span>
-        </div>
-      </form>
-      <!-- /.search form -->
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">MAIN NAVIGATION</li>
+        <li class="header">Navegación principal</li>
         <li class="active treeview">
           <a href="#">
-            <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+            <i class="fa fa-home"></i> <span>Inicio</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-            <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+            <li class="active"><a href="/home"><i class="fa fa-list"></i> Vista general</a></li>
           </ul>
         </li>
+
+        <li >
+          <a href="/transactions">
+            <i class="fa fa-table"></i> <span>Transacciones</span>
+          </a>
+        </li>
+        
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-university"></i>
+            <span>Cuentas</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="/accounts"><i class="fa fa-address-book"></i> Mis cuentas</a></li>
+            <li><a href="/create_account"><i class="fa fa-plus-square"></i> Agregar cuenta</a></li>
+          </ul>
+        </li>
+
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-credit-card"></i> <span>Tarjetas de credito</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="/create_card"><i class="fa fa-plus-square"></i>Crear</a></li>
+            <li><a href="/cards"><i class="fa fa-eye"></i>Ver </a></li>
+          </ul>
+        </li>
+
         <li class="treeview">
           <a href="#">
             <i class="fa fa-pie-chart"></i>
@@ -215,25 +247,24 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="pages/charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-            <li><a href="pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
-            <li><a href="pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-            <li><a href="pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+            <li><a href="/graficos"><i class="fa fa-circle-o"></i> ChartJS</a></li>
           </ul>
         </li>
-        
+
         <li class="treeview">
           <a href="#">
-            <i class="fa fa-table"></i> <span>Tabla de gastos</span>
+            <i class="fa fa-inbox"></i> <span>Ahorros</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="pages/tables/simple.html"><i class="fa fa-circle-o"></i> Simple tables</a></li>
-            <li><a href="pages/tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li>
+            <li><a href="/savings"><i class="fa fa-circle-o"></i>Ver ahorros</a></li>
+            <li><a href="/new_saving"><i class="fa fa-circle-o"></i>Crear ahorro </a></li>
           </ul>
         </li>
+        
+        
       </ul>
     </section>
     <!-- /.sidebar -->
@@ -241,105 +272,21 @@
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
-    <!-- Main content -->
     <section class="content">
-      <!-- Small boxes (Stat box) -->
-      <div class="row">
-        <div class="col-lg-3 col-xs-6">
-          <!-- small box -->
-          <div class="small-box bg-aqua">
-            <div class="inner">
-              <h3>150</h3>
+    {{{body}}}
 
-              <p>New Orders</p>
-            </div>
-            <div class="icon">
-              <i class="ion ion-cash"></i>
-            </div>
-            <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-          </div>
-        </div>
-        <!-- ./col -->
-        <div class="col-lg-3 col-xs-6">
-          <!-- small box -->
-          <div class="small-box bg-green">
-            <div class="inner">
-              <h3>53<sup style="font-size: 20px">%</sup></h3>
-
-              <p>Bounce Rate</p>
-            </div>
-            <div class="icon">
-              <i class="ion ion-arrow-graph-up-right"></i>
-            </div>
-            <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-          </div>
-        </div>
-        <!-- ./col -->
-        <div class="col-lg-3 col-xs-6">
-          <!-- small box -->
-          <div class="small-box bg-yellow">
-            <div class="inner">
-              <h3>44</h3>
-
-              <p>User Registrations</p>
-            </div>
-            <div class="icon">
-              <i class="ion ion-arrow-graph-down-right"></i>
-            </div>
-            <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-          </div>
-        </div>
-        <!-- ./col -->
-        <div class="col-lg-3 col-xs-6">
-          <!-- small box -->
-          <div class="small-box bg-red">
-            <div class="inner">
-              <h3>65</h3>
-
-              <p>Unique Visitors</p>
-            </div>
-            <div class="icon">
-              <i class="ion ion-card"></i>
-            </div>
-            <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-          </div>
-        </div>
-        <!-- ./col -->
-      </div>
-      <!-- /.row -->
-      <!-- Main row -->
-      <div class="row">
-        <!-- Left col -->
-        <section class="col-lg-7 connectedSortable">
-          <!-- Custom tabs (Charts with tabs)-->
-          <div class="nav-tabs-custom">
-            <!-- Tabs within a box -->
-            <ul class="nav nav-tabs pull-right">
-              <li class="active"><a href="#revenue-chart" data-toggle="tab">Area</a></li>
-              <li><a href="#sales-chart" data-toggle="tab">Dona</a></li>
-              <li class="pull-left header"><i class="fa fa-inbox"></i> Gastos</li>
-            </ul>
-            <div class="tab-content no-padding">
-              <!-- Morris chart - Sales -->
-              <div class="chart tab-pane active" id="revenue-chart" style="position: relative; height: 300px;">
-
-              </div>
-              <div class="chart tab-pane" id="sales-chart" style="position: relative; height: 300px;">
-                  
-              </div>
-            </div>
-          </div>
-        </section>
-        <!-- /.Left col -->
-        <!-- right col (We are only adding the ID to make the widgets sortable)-->
-        <section class="col-lg-5 connectedSortable">
-
-        </section>
-        <!-- right col -->
-      </div>
-      <!-- /.row (main row) -->
-
+      
+    <div class="inner-fabs">
+      <div class="fab round green" id="fab4" data-toggle="modal" data-target="#squarespaceModal" data-tooltip="Agregar ingreso"><i class="ion ion-arrow-graph-up-right"></i></div>
+      <div class="fab round blue" id="fab3" data-tooltip="Agregar gasto"><i class="ion ion-arrow-graph-down-right"></i></div>
+      <div class="fab round yellow" id="fab2" data-tooltip="Crear gasto de la tarjeta"><i class="fa fa-credit-card"></i></div>
+      <div class="fab round otherblue" id="fab5" data-tooltip="Ahorros"><i class="fa fa-inbox"></i></div>
+    </div>
+    <div class="fab round" id="fab1"><i class="material-icons" id="fabIcon">add</i></div>
+      
+      
     </section>
+    
     <!-- /.content -->
   </div>
   <!-- /.control-sidebar -->
@@ -348,6 +295,7 @@
   <div class="control-sidebar-bg"></div>
 </div>
 <!-- ./wrapper -->
+
 
 <!-- jQuery 3 -->
 <script src="/templates/bower_components/jquery/dist/jquery.min.js"></script>
@@ -363,7 +311,7 @@
 <script src="/templates/bower_components/raphael/raphael.min.js"></script>
 <script src="/templates/bower_components/morris.js/morris.min.js"></script>
 <!-- Sparkline -->
-<script src="bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
+<script src="/templates/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
 <!-- jvectormap -->
 <script src="/templates/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
 <script src="/templates/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
@@ -382,9 +330,11 @@
 <script src="/templates/bower_components/fastclick/lib/fastclick.js"></script>
 <!-- AdminLTE App -->
 <script src="/templates/dist/js/adminlte.min.js"></script>
-<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="/templates/dist/js/pages/dashboard.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="/templates/dist/js/demo.js"></script>
+<!-- Script para el floating action button -->
+<script src="/fab/fab.js"></script>
+<!-- Script para el calendario modal -->
+<script src="/js/modalCalendar.js"></script>
 </body>
 </html>
