Some changes in modals

--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -33,7 +33,13 @@
   <!-- bootstrap wysihtml5 - text editor -->
   <link rel="stylesheet" href="/templates/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
 
+  <link rel="stylesheet" href="/templates/bower_components/select2/dist/css/select2.min.css">
+
   <link rel="stylesheet" href="/css/modal.css">
+
+  <link rel="stylesheet" href="/date/date.css">
+
+  
   <!--Importar Materialize CSS-->
   
 
@@ -330,11 +336,14 @@
 <script src="/templates/bower_components/fastclick/lib/fastclick.js"></script>
 <!-- AdminLTE App -->
 <script src="/templates/dist/js/adminlte.min.js"></script>
+
+<script src="/templates/bower_components/select2/dist/js/select2.full.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="/templates/dist/js/demo.js"></script>
 <!-- Script para el floating action button -->
 <script src="/fab/fab.js"></script>
 <!-- Script para el calendario modal -->
-<script src="/js/modalCalendar.js"></script>
+<script src="/date/date.js"></script>
+
 </body>
 </html>
