--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -54,7 +54,7 @@
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
-<body class="sidebar-mini wysihtml5-supported skin-red" onload="incomeChart(`{{datos}}`)">
+<body class="sidebar-mini wysihtml5-supported skin-red">
 <div class="wrapper">
 
   <header class="main-header">
